<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/border">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/circlefood"
        android:src="@drawable/food"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_menu"
        android:id="@+id/nameofmenu"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/circlefood"/>

    <TextView
        android:id="@+id/rupees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/pricetextview"
        android:padding="10dp"
        android:text="@string/rs"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pricetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="33dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/price" />

</RelativeLayout>