<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/circlefood"
        android:src="@drawable/food"/>

    <TextView
        android:id="@+id/nameofmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/circlefood"
        android:padding="10dp"
        android:text="@string/name_of_menu"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rupees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/circlefood"
        android:layout_marginEnd="104dp"
        android:padding="10dp"
        android:text="@string/rs"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pricetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/circlefood"
        android:layout_marginStart="-104dp"
        android:layout_toEndOf="@+id/rupees"
        android:padding="10dp"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkboxselect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/pricetextview" />

</RelativeLayout>