<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hotel_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/linearlayout1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="60dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_outline"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_outline"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_button"
            android:text="@string/log_in_label"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="300dp"
        android:layout_height="22dp"
        android:layout_below="@+id/linearlayout1"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@null"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_gotosignup"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/btn_reset_password"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_password" />

</android.support.constraint.ConstraintLayout>