<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/message_profile_layout"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@mipmap/male" />

    <TextView
        android:id="@+id/message_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_text_layout"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/message_profile_layout"
        android:padding="0dp"
        android:text="@string/message_text"
        android:textColor="#444444"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/name_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/message_profile_layout"
        android:text="@string/display_name"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

   <!-- <TextView
        android:id="@+id/time_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/name_text_layout"
        android:text="@string/_00_00"
        android:textSize="12sp" />     -->

    <ImageView
        android:id="@+id/message_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/message_text_layout"
        android:layout_below="@+id/message_text_layout"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/message_profile_layout"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    </RelativeLayout>